# gracia-residences

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
app/: __init__.py  forms.py  views.py
app/static/css/: style.css  themify-icons.css
app/templates/: index.html
deployments/nginx/: nginx.conf
